--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -93,11 +93,18 @@ golang, concurrency, testing coverage analysis
 \label{sec:coverage}
 \input{coverage.tex}
 
-\section{Related Work}
-\label{sec:related}
-\input{relatedwork.tex}
 
+%\section{Related Work}
+%\label{sec:related}
+%\input{relatedwork.tex}
 
+\section{Conclusion}
+\label{sec:conclusion}
+\input{conclusion.tex}
+
+\section{Summary \& Future Work}
+\label{sec:summary}
+\input{summary.tex}
 
 
 \bibliographystyle{IEEEtran}
