--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,27 @@
-
+The use of increasing levels of parallelism and concurrency in system
+design---especially in a feature-rich language such as Go---demands
+effective concurrency debugging techniques that are easy to deploy in practice.
+%
+We present GoAT, a combined static and dynamic concurrency analysis
+and debugging approach
+that maximally takes advantage of Go's existing tooling infrastructure.
+%
+Given the nascent state of Go debugging, our approach builds
+a debugging approach by deriving insights from recent Go bug benchmark
+suites.
+%
+Key ideas in GoAT include static instrumentation of yield-points
+at all concurrency sites followed by runtime selection of yields with
+a user-specified probability.
+%
+The approach in GoAT can coexist with existing dynamic Go verification tooling
+for memory leak detection and data race checking while adding significant
+new capabilities toward concurrency debugging.
+%
+Our evaluation on 68 curated real-world bug scenarios
+demonstrates that GoAT is significantly effective in detecting
+rare bugs, and its schedule perturbation method based on schedule
+yielding detects these bugs within about five yields.
+%
+These results together with the ease of deploying GoAT on real-world
+Go programs holds significant promise in field-debugging of Go programs.
